agregando portada y favicon

--- a/index.html
+++ b/index.html
@@ -3,15 +3,23 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Lyft</title>
+		<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<link rel="shortcut icon" href="favicon.ico">
 	</head>
 	<body>
-		<div class="container col-xs-12" id="container">
+		<div class="container col-xs-12 col-sm-12 col-md-12 col-lg-12" id="container">
 			<div class="preloader">
-				<img src="img/logoL.svg" class="logo">
+				<img src="img/logoL.svg" class="logo desaparecer">
 			</div>
 		</div>
-
-	<script type="text/javascript" src= "js/main.js"></script>	s
+		<div id="portada">
+			<img src="img/lyft-mostache.gif" class="imgPortada">
+			<a class="col-xs-4 col-xs-offset-1 login">Log in</a>
+			<a class="col-xs-4 col-xs-offset-1 signUp right" href="#">Sign up</a>
+		</div>
+	<script type="text/javascript" src="js/jquery.min.js"></script>
+	<script type="text/javascript" src="js/bootstrap.js"></script>
+	<script type="text/javascript" src= "js/main.js"></script>
 	</body>
 </html>
