--- a/index.html
+++ b/index.html
@@ -2,16 +2,30 @@
 <html lang="es">
 	<head>
 		<meta charset="UTF-8">
-		<title>Lyft</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+		<link rel="stylesheet" type="text/css" href="css/simplegrid.css">
 		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<link rel="shortcut icon" href="favicon.ico">
+		<title>Lyft</title>
 	</head>
 	<body>
-		<div class="container col-xs-12" id="container">
+		<div class="container-fluid col-12 loading">
 			<div class="preloader">
 				<img src="img/logoL.svg" class="logo">
 			</div>
 		</div>
+		<div class="portada col-12 container-fluid">
+			<img src="img/lyft-mostache.gif" class="imgPortada">
+			<div class="col-6 btn">
+				<a class="login">Log in</a>
+			</div>
+			<div class="col-6 btn">
+				<a class="signUp" href="signUp.html">Sign up</a>
+			</div>
+		</div>
 
-	<script type="text/javascript" src= "js/main.js"></script>	s
+	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+	<script type="text/javascript" src= "js/main.js"></script>
 	</body>
-</html>
+</html
+
