agregando páginas html y css

--- a/registry.html
+++ b/registry.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-		<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+		<link rel="stylesheet" type="text/css" href="css/font-awesome.css">
 		<link rel="stylesheet" type="text/css" href="css/simplegrid.css">
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 		<link rel="shortcut icon" href="favicon.ico">
@@ -19,7 +19,7 @@
 		<section class="ingresoDatos">
 			<div class="container bordeDatos">
 				<div class="col-2">
-					<i></i>
+					<i class="fa fa-user-circle"></i>
 				</div>
 				<div class="col-5">
 					<input type="text" placeholder="First name">
@@ -28,9 +28,9 @@
 					<input type="text" placeholder="Last name">
 				</div>
 			</div>
-			<div class="container bordeDatos">
+			<div class="container bordeEmail bordeDatos">
 				<div class="col-2">
-					<i></i>
+					<i class="fa fa-envelope-o iconEmail"></i>
 				</div>
 				<div class="col-10">
 					<input type="email" placeholder="Email">
@@ -38,7 +38,7 @@
 			</div>
 		</section>
 		<div class="container areaTerminos">
-			<p><input type="checkbox"> I agree to Lyft <a href="#">Terms of Service</a></p>
+			<p><input type="checkbox"> I agree to Lyft <a class="aTerminos" href="#">Terms of Service</a></p>
 		</div>
 		<footer class="col-12 nextF">
 			<a href="map.html" class="textNextF">Next</a>
