--- a/signUp.html
+++ b/signUp.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 		<link rel="stylesheet" type="text/css" href="css/font-awesome.css">
+		<link rel="stylesheet" type="text/css" href="css/sweetalert.css">
 		<link rel="stylesheet" type="text/css" href="css/simplegrid.css">
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 		<link rel="shortcut icon" href="favicon.ico">
@@ -16,23 +17,23 @@
 			<p class="pSignUp">Join now for free ride credit</p>
 			<div class="lineaDivisora col-12"></div>
 		</div>
-		<section class="container inputSign">
+		<div method="post" id="formulario" class="container inputSign">
 			<div class="col-2 separacionDivs">
 				<img src="img/banderaP.png" class="banderaSign">
 			</div>
 			<div class="col-2 separacionDivs">+51</div>
-			<div class="col-8 separacionDivs">
+			<form class="col-8 separacionDivs">
 				<input type="tel" maxlength="9" name="celular" placeholder="123456789">
-			</div>
-		</section>
+			</form>
+		</div>
 			<p class="pSignUp">We'll send a text to verify your phone</p>
 		<footer class="col-12 nextF">
 			<a href="verify.html" class="textNextF">Next</a>
 		</footer>
 
+	<script type="text/javascript" src="js/jquery.validate.js"></script>
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 	<script type="text/javascript" src= "js/main.js"></script>
-	<script type="text/javascript" src="js/jquery.validate.js"></script>
 	</body>
 </html>
 
