--- a/verify.html
+++ b/verify.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 		<link rel="stylesheet" type="text/css" href="css/font-awesome.css">
 		<link rel="stylesheet" type="text/css" href="css/simplegrid.css">
+		<link rel="stylesheet" type="text/css" href="css/sweetalert.css">
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 		<link rel="shortcut icon" href="favicon.ico">
 		<title>Lyft</title>
@@ -17,18 +18,19 @@
 			<div class="lineaDivisora col-12"></div>
 		</div>
 		<section class="container">
-			<div class="col-2">
+			<form class="col-2">
 				<input  class="numCode" type="tel" maxlength="1">
 				<input  class="numCode" type="tel" maxlength="1">
 				<input  class="numCode" type="tel" maxlength="1">
 				<input  class="numCode" type="tel" maxlength="1">
-			</div>
+			</form>
 		</section>
 			<p class="pSignUp">Enter the send code sent to +51</p>
 		<footer class="col-12 nextF">
 			<a href="registry.html" class="textNextF">Next</a>
 		</footer>
-		
+	
+	<script type="text/javascript" src="js/jquery.validate.js"></script>	
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 	<script type="text/javascript" src= "js/main.js"></script>
 	</body>
